--- a/.github/workflows/azure.yml
+++ b/.github/workflows/azure.yml
@@ -19,6 +19,9 @@ on:
   push:
     branches:
       - main
+  pull_request:
+    branches:
+      - main
 
 env:
   AZURE_WEBAPP_NAME: Spatch    # set this to your application's name
@@ -41,8 +44,8 @@ jobs:
         # Build and test the project, then
         # deploy to Azure Web App.
         npm install
-        npm run build --if-present
-        npm run test --if-present
+        npm run build
+        npm run test 
     - name: 'Deploy to Azure WebApp'
       uses: azure/webapps-deploy@v2
       with:
