added jest test

--- a/.github/workflows/azure.yml
+++ b/.github/workflows/azure.yml
@@ -44,6 +44,8 @@ jobs:
         # Build and test the project, then
         # deploy to Azure Web App.
         npm install
+    - name: jest test
+      run: npm test
     - name: 'Deploy to Azure WebApp'
       uses: azure/webapps-deploy@v2
       with:
