--- a/.github/workflows/azure.yml
+++ b/.github/workflows/azure.yml
@@ -65,4 +65,10 @@ jobs:
     - name: Codacy Analysis CLI
       uses: codacy/codacy-analysis-cli-action@4.0.0
       env:
-        CODACY_PROJECT_TOKEN: S{{ secrets.CODACY_PROJECT_TOKEN }}
+        CODACY_PROJECT_TOKEN: ${{ secrets.CODACY_PROJECT_TOKEN }}
+  jsdoc-generator:
+    runs-on: ubuntu-latest
+    steps:
+    - name: JSDoc Action
+      uses: andstor/jsdoc-action@v1.2.0
+
