--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
   "bugs": {
     "url": "https://github.com/cse110-fa21-group18/cse110-fa21-group18/issues"
   },
-  "homepage": "https://github.com/cse110-fa21-group18/cse110-fa21-group18#readme"
+  "homepage": "https://github.com/cse110-fa21-group18/cse110-fa21-group18#readme",
+  "devDependencies": {
+    "jest": "^27.3.1"
+  }
 }
