--- a/.github/workflows/netlifyTestDeploy.yml
+++ b/.github/workflows/netlifyTestDeploy.yml
@@ -31,6 +31,7 @@ jobs:
         # deploy to Azure Web App.
         npm install
         npm build
+        npm pack
         npm ci
   lint:
     runs-on: ubuntu-latest
