--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "package.json",
+  "name": "@cse110-fa21-group18/spatch",
   "version": "1.0.0",
   "description": "Spatch Project",
   "main": "index.js",
