--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "spatch",
+  "name": "cse110-spatch",
   "version": "1.0.0",
   "description": "Spatch Project",
   "main": "index.js",
