--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@cse110-group18-spatch-package",
+  "name": "cse110-group18-spatch-package",
   "version": "1.0.0",
   "description": "Spatch Project",
   "main": "home.js",
