testing package publishing

--- a/.github/workflows/netlifyTestDeploy.yml
+++ b/.github/workflows/netlifyTestDeploy.yml
@@ -15,20 +15,26 @@ on:
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  build-and-deploy:
+  build-deploy-publish:
     name: Build and Deploy
     runs-on: ubuntu-latest
     environment: production
     steps:
     - uses: actions/checkout@v2
+    - uses: actions/setup-node@v1
+      with:
+        node-version: 12
+        registry-url: https://npm.pkg.github.com/
+        scope: '@cse110-fa21-group18'
     - name: Deploy
       run: curl -X POST -d {} ${{ secrets.NETLIFY_BUILD_HOOK }}
     - name: npm install, build, and test
       run: |
-        # Build and test the project, then
-        # deploy to Azure Web App.
         npm install
         npm build
+        npm publish
+      env:
+        NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
   lint:
     runs-on: ubuntu-latest
     steps:
@@ -48,3 +54,4 @@ jobs:
       uses: romeovs/lcov-reporter-action@v0.2.11
       with:
         lcov-file: ./coverage/lcov.info
+  
