--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "cse110-spatch",
   "version": "1.0.0",
   "description": "Spatch Project",
-  "main": "index.js",
+  "main": "home.html",
   "scripts": {
     "test": "jest"
   },
