--- a/.github/workflows/netlifyTestDeploy.yml
+++ b/.github/workflows/netlifyTestDeploy.yml
@@ -48,7 +48,11 @@ jobs:
     steps:
     - name: Code Coverage Report
       uses: romeovs/lcov-reporter-action@v0.2.11
-      
+  auto-minify:
+    runs-on: ubuntu-latest
+    steps:
+    - name: Auto Minify
+      uses: nizarmah/auto-minify@v2.1.1    
   publish-npm:
     needs: build
     runs-on: ubuntu-latest
@@ -62,7 +66,6 @@ jobs:
       - run: npm publish
         env:
           NODE_AUTH_TOKEN: ${{secrets.npm_token}}
-
   publish-gpr:
     needs: build
     runs-on: ubuntu-latest
@@ -80,3 +83,4 @@ jobs:
       - run: npm publish
         env:
           NODE_AUTH_TOKEN: ${{secrets.GITHUB_TOKEN}}
+
