--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "cse110-spatch",
+  "name": "@cse110-fa21-group18/cse110-fa21-group18",
   "version": "1.1.0",
   "description": "Spatch Project",
   "main": "index.js",
