--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "@cse110-fa21-group18/cse110-fa21-group18",
+  "name": "@htclorina/cse110-fa21-group18",
   "version": "1.1.0",
   "description": "Spatch Project",
   "main": "index.js",
   "publishConfig": {
-  "registry":"https://npm.pkg.github.com/@cse110-fa21-group18"
+  "registry":"https://npm.pkg.github.com/@htclorina"
   },
   "scripts": {
     "test": "jest"
