--- a/.github/workflows/netlifyBuildDeploy.yml
+++ b/.github/workflows/netlifyBuildDeploy.yml
@@ -29,7 +29,7 @@ jobs:
       with:
         node-version: 14
         registry-url: https://npm.pkg.github.com/
-        scope: '@htclorina'
+        scope: '@cse110-fa21-group18'
     - run: npm install
     - run: npm publish
       env:
