--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Spatch Project",
   "main": "index.js",
   "publishConfig": {
-  "registry":"https://npm.pkg.github.com/@cse110-fa21-group18"
+    "registry": "https://npm.pkg.github.com/@cse110-fa21-group18"
   },
   "scripts": {
     "test": "jest"
@@ -21,5 +21,8 @@
   "homepage": "https://github.com/cse110-fa21-group18/cse110-fa21-group18#readme",
   "devDependencies": {
     "jest": "^27.3.1"
+  },
+  "dependencies": {
+    "puppeteer": "^12.0.1"
   }
 }
