--- a/package.json
+++ b/package.json
@@ -20,9 +20,10 @@
   },
   "homepage": "https://github.com/cse110-fa21-group18/cse110-fa21-group18#readme",
   "devDependencies": {
-    "jest": "^27.3.1"
+    "jest": "^27.4.3"
   },
   "dependencies": {
+    "jest-puppeteer": "^6.0.2",
     "puppeteer": "^12.0.1"
   }
 }
