--- a/.github/workflows/netlifyBuildDeploy.yml
+++ b/.github/workflows/netlifyBuildDeploy.yml
@@ -51,12 +51,25 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - name: Auto Minify
-      uses: nizarmah/auto-minify@v2.1.1 
+      uses: nizarmah/auto-minify@v2.1
+      with:
+        overwrite: true
+    # Auto commits minified content to the existing files
+    # Ignore it if you don't want to commit the files to the repository 
+    - name: Auto committing minified files
+      uses: stefanzweifel/git-auto-commit-action@v4
+      with:
+        commit_message: "Github Action: Auto Minified JS and CSS files"
+        branch: ${{ main }}1 
   jsdoc-generator:
     runs-on: ubuntu-latest
     steps:
     - name: JSDoc Action
       uses: andstor/jsdoc-action@v1.2.0
+      with:
+        source_dir: ./source
+        recurse: true
+        output_dir: ./out
   code-coverage-report:
     runs-on: ubuntu-latest
     steps:
